# PHyCLIP

./: .gitmodules  README.md  pyproject.toml  setup.py
assets/imagenet_synset/: all_ancestors_indices.pkl  all_synsets.pkl
configs/: eval_compositionality_test.py  eval_hierarchical_metrics.py  eval_zero_shot_classification.py  eval_zero_shot_retrieval.py  train_clip_vit_b.py  train_clip_vit_l.py  train_clip_vit_s.py  train_hycoclip_vit_b.py  train_hycoclip_vit_l.py  train_hycoclip_vit_s.py  train_meru_vit_b.py  train_meru_vit_l.py  train_meru_vit_s.py  train_phyclip_vit_b.py  train_phyclip_vit_l.py  train_phyclip_vit_s.py  vl_checklist_config.yaml
phyclip/: config.py  lorentz.py  models.py  optim.py  tokenizer.py
phyclip/data/: evaluation.py  webdataset_mapper.py
phyclip/encoders/: image_encoders.py  text_encoders.py
phyclip/evaluation/: catalog.py  class_names.py  classification.py  hierarchical_metrics.py  retrieval.py  vl_checklist_helper.py  vl_checklist_wrapper.py
phyclip/utils/: checkpointing.py  directory.py  distributed.py  evaluation.py  timer.py  word_generation.py  worker.py
scripts/: analyze_compositionality.py  analyze_group_wise_norm.py  analyze_space_wise_norm.py  batch_evaluate.py  evaluate.py  interpolating_points.py  norm_dist.py  redcaps_grounding.py  run_sugarcrepe.py  run_vl_checklist.py  save_embeddings.py  train.py
utils/: prepare_GRIT_webdataset.py
